# Symbolic-differentiation

./: .gitignore  CMakeLists.txt  README.md
Commands/: Commands.h  MathFunc.h
Diff/: BinaryMathFunc.h  Diff.cpp  Diff.h  MathFunc.h  UnaryMathFunc.h  main.cpp
Differentiator/: Differentiator .cpp  Differentiator .h  Differentiator.c  Differentiator.cpp  Differentiator.h  main.c  main.cpp
Dumps/: base.txt
RecursiveDescent/: Descent.c  Descent.cpp  Descent.h  MathFunc.h
Tree_t/: Tree.c  Tree.cpp  Tree.h
base/: base.txt
examples/Tex/: Diff_Result
examples/picture/: dotDump.txt
picture/: dotDump.txt  dotPrint.txt
src/: CMakeLists.txt  main.c
src/Commands/: Commands.h
src/Differentiator/: Differentiator.c  Differentiator.h  List.h  expression.txt  main.c
src/RecursiveDescent/: Descent.c  Descent.h
src/Tex/: Diff_Result
src/Tree_t/: Tree.c  Tree.h
src/picture/: dotPrint.txt
